--- a/style.css
+++ b/style.css
@@ -22,33 +22,37 @@ h1 {
     margin: 20px;
 }
 
-p {
-    text-align: justify;
-    font-size: 15px;
-    font-family: 'Arial';
-    margin: 20px;
-    color: aliceblue;
-}
+h2{
+    text-align: center;
+    /* font-size: 22px; */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 50px;
+    color: rgb(0, 0, 0);
 
+}
+/* 
 hr {
     max-width: 50%;
     margin: 20px auto;
-}
+}  */
 
 a {
     display: block;
     text-align: center;
     text-decoration: none;
-    margin: 5px auto;
-    color: rgb(248, 0, 0);
+    margin: 6px;
+    color: rgb(255, 0, 0);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
+    font-size: 22px;
 }
 
 button {
     display: block;
-    margin: 34px auto;
-    padding: 9px 25px;
-    border-radius: 100px;
-    text-decoration: none;
+    margin: 10px auto;
+    border-radius: 35px;
+    padding: 20px;
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
 }
 
 
