--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ h1 {
 
 h2{
     text-align: center;
-    /* font-size: 22px; */
+    font-size: 37px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 50px;
+    /* margin: 0px; */
     color: rgb(0, 0, 0);
 
 }
@@ -48,7 +48,7 @@ a {
 
 button {
     display: block;
-    margin: 10px auto;
+    margin: 50px auto;
     border-radius: 35px;
     padding: 20px;
     font-size: 18px;
@@ -78,8 +78,8 @@ h3 {
 
 img {
     display: block;
-    max-width: 200px;
-    margin: 15px auto;
+    max-width: 400px;
+    margin: 9px auto;
 }
 
 input-group {
